test/log/iir/vsrdotiiru_v_i32_d1s7.txt
vsrdotiiru_v_i32_d1s7.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsrdotiiru_v_i32_d1s7.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsrdotiiru_v_i32_d1s7.c:37:6: warning: no previous prototype for 'vsrdotiiru_v_i32_d1s7_golden' [-Wmissing-prototypes]
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsrdotiiru_v_i32_d1s7.c: In function 'vsrdotiiru_v_i32_d1s7_golden':
vsrdotiiru_v_i32_d1s7.c:38:1: error: unknown type name 'Operator'
   38 | Operator Line --- TODO
      | ^~~~~~~~
vsrdotiiru_v_i32_d1s7.c:38:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   38 | Operator Line --- TODO
      |               ^~
vsrdotiiru_v_i32_d1s7.c:42:5: warning: 'main' is normally a non-static function [-Wmain]
   42 | int main(void) {
      |     ^~~~
vsrdotiiru_v_i32_d1s7.c: In function 'main':
vsrdotiiru_v_i32_d1s7.c:44:13: warning: declaration of 'base' shadows a parameter [-Wshadow]
   44 |     int32_t base[ELE_NUM*COMBO_NUM];
      |             ^~~~
vsrdotiiru_v_i32_d1s7.c:37:44: note: shadowed declaration is here
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                   ~~~~~~~~~^~~~
vsrdotiiru_v_i32_d1s7.c:45:18: warning: declaration of 'a' shadows a parameter [-Wshadow]
   45 |     int32x16x7_t a;
      |                  ^
vsrdotiiru_v_i32_d1s7.c:37:57: note: shadowed declaration is here
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                                 ~~~~~~~~^~~~~~~~
vsrdotiiru_v_i32_d1s7.c:50:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   50 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vsrdotiiru_v_i32_d1s7.c:37:75: note: shadowed declaration is here
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                                                  ~~~~~~~~~^~~~~~~~~~
vsrdotiiru_v_i32_d1s7.c:65:14: warning: implicit declaration of function 'vsrdotiiru_v_i32_d1s7'; did you mean 'vsrdotiiru_v_u32_d1s7'? [-Wimplicit-function-declaration]
   65 |     result = vsrdotiiru_v_i32_d1s7(base,a);
      |              ^~~~~~~~~~~~~~~~~~~~~
      |              vsrdotiiru_v_u32_d1s7
vsrdotiiru_v_i32_d1s7.c:65:14: error: incompatible types when assigning to type 'int32x16_t' from type 'int'
vsrdotiiru_v_i32_d1s7.c:70:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   70 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vsrdotiiru_v_i32_d1s7.c: In function 'vsrdotiiru_v_i32_d1s7_golden':
vsrdotiiru_v_i32_d1s7.c:85:1: error: expected declaration or statement at end of input
   85 | }
      | ^
vsrdotiiru_v_i32_d1s7.c:37:44: warning: unused parameter 'base' [-Wunused-parameter]
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                   ~~~~~~~~~^~~~
vsrdotiiru_v_i32_d1s7.c:37:57: warning: unused parameter 'a' [-Wunused-parameter]
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                                 ~~~~~~~~^~~~~~~~
vsrdotiiru_v_i32_d1s7.c:37:75: warning: unused parameter 'exp_result' [-Wunused-parameter]
   37 | void vsrdotiiru_v_i32_d1s7_golden(int32_t *base,int32_t a[7][16],int32_t *exp_result) {
      |                                                                  ~~~~~~~~~^~~~~~~~~~
At top level:
vsrdotiiru_v_i32_d1s7.c:42:5: warning: 'main' defined but not used [-Wunused-function]
   42 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiiru_v_i32_d1s7.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsrdotiiru_v_i32_d1s7"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsrdotiiru_v_i32_d1s7.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiiru_v_i32_d1s7.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed